# klassifier

./: .gitignore  CMakeLists.txt  Klassifier.wxs  add-klassifier.ps1  build.cmd  build.sh  config.cpp  config.h  main.cpp
resources/: config.ini
src/: main.cpp
